
ACLOCAL_AMFLAGS = -I .

SUBDIRS = tools src test

noinst_SCRIPTS = TESTS_ENVIRONMENT

dist_man_MANS = lnav.1

EXTRA_DIST = \
    docs/lnav-architecture.png \
    docs/lnav-tui.png \
    docs/schemas/config-v1.schema.json \
    docs/schemas/event-file-format-detected-v1.schema.json \
    docs/schemas/event-file-open-v1.schema.json \
    docs/schemas/event-log-msg-detected-v1.schema.json \
    docs/schemas/event-session-loaded-v1.schema.json \
    docs/schemas/format-v1.schema.json \
    ARCHITECTURE.md \
	AUTHORS \
	LICENSE \
    README.md
